assets/css/v2/lcd_common_styles/subway_status.scss
.subway-status {
  /// Reusable values for the component
  /// (Defined here to avoid polluting the global namespace)
  $text-dark-gray: #171f26;
  $widget-background: #e5e4e1;
  $rule-color: #cccbc8;

  $status-top-padding: 18px;
  $status-left-padding: 24px;
  $pill-width: 144px;
  $pill-height: 74px;
  $intra-alert-margin-without-second-pill: 7px;
  $intra-alert-margin-with-second-pill: 32px;
  $contracted-status-with-one-alert-bottom-padding: 22px;
  $contracted-status-with-two-alerts-bottom-padding: 20px;
  $extended-status-bottom-padding: 71px;

  /// End variables
  /// Begin styles

  width: 1024px;
  height: 576px;
  overflow: hidden;

  box-sizing: border-box;
  padding-top: 6px;

  background: $widget-background;
  color: $text-dark-gray;
  font-family: Inter, sans-serif;

  border-radius: 16px;
  box-shadow: 0px 12px 24px 0px rgba(23, 31, 38, 0.25);

  .subway-status_status {
    position: relative;

    width: 100%;

    box-sizing: border-box;
    padding-top: $status-top-padding;
    padding-left: $status-left-padding;

    overflow: hidden;
  }

  .subway-status_status--contracted.subway-status_status--one-alert {
    // 114px
    height: $status-top-padding + $pill-height + $contracted-status-with-one-alert-bottom-padding;
  }

  .subway-status_status--contracted.subway-status_status--two-alerts:not(.subway-status_status--has-second-pill) {
    // 193px
    // Second alert still gets the height of a pill, despite not having one visible
    height: $status-top-padding + (2 * $pill-height) + $intra-alert-margin-without-second-pill + $contracted-status-with-two-alerts-bottom-padding;
  }

  // &--contracted.subway-status_status--two-alerts.subway-status_status--has-second-pill {}
  // ^
  // Height is not needed for statuses with 2 alerts + 2 pills because this can only happen
  // for the GL status, which always appears last and has nothing below it (not even the last
  // rule, since the 2nd pill means we don't show it--see `shouldShowLastRule` JS function)

  .subway-status_status--extended {
    // 163px
    height: $status-top-padding + $pill-height + $extended-status-bottom-padding;
  }

  // Since the rule is positioned absolutely over the row without
  // adding any height, we can't use an ::after pseudo-element.
  // Instead, whether to include the rule or not is determined
  // in the React code and it's rendered as a real element.
  .subway-status_status_rule {
    content: "";

    position: absolute;
    bottom: 0;
    right: 24px;

    width: 808px;
    height: 4px;

    background: $rule-color;
    border-radius: 2px;
  }

  .subway-status_status--contracted .subway-status_alert {
    height: 74px;
    overflow: hidden;
  }

  // The top margin value for the second contracted alert
  // in a section depends on whether it has a pill or not.
  .subway-status_alert:nth-of-type(2) {
    &.subway-status_alert--has-pill {
      margin-top: $intra-alert-margin-with-second-pill;
    }

    &.subway-status_alert--no-pill {
      margin-top: $intra-alert-margin-without-second-pill;
    }
  }

  .subway-status_alert_route-pill-container {
    display: inline-block;
    // If the row has no pill, we still keep this element as a pill-sized
    // spacer to maintain consistent positioning of everything else in the row.
    min-width: $pill-width;
    height: $pill-height;
  }

  .subway-status_alert_text-container {
    display: inline-block;
    vertical-align: top;
    width: fit-content;
    max-width: 830px;
    margin-left: 24px;
  }

  .subway-status_status--contracted .subway-status_alert_text-container.subway-status_alert_text-container--hide-overflow {
    height: $pill-height;
  }

  .subway-status_alert_text-container.subway-status_alert_text-container--hide-overflow {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: clip;
  }

  span.subway-status_alert_status-text {
    // common styles for status text
    font-weight: 800;
    line-height: $pill-height;
    font-size: 48px;
  }

  .subway-status_status--extended span.subway-status_alert_status-text {
    // extended-specific styles for status text
    display: block;
    height: 68px;
    margin-bottom: 4px;
  }

  span.subway-status_alert_status-text.subway-status_alert_status-text--normal-service {
    // "Normal Service" gets thinner text
    font-weight: 500;
    font-size: 40px;
  }

  span.subway-status_alert_location-text {
    // common styles for location text
    font-weight: 500;
    font-size: 32px;
  }

  .subway-status_status--contracted span.subway-status_alert_location-text {
    // contracted-specific styles for location text
    margin-left: 16px;
    line-height: $pill-height;
  }

  .subway-status_status--extended span.subway-status_alert_location-text {
    // extended-specific styles for location text
    line-height: 48px;
  }

  .branch-icon {
    margin-left: 5px;
  }
}

